[package]
name = "rustplot"
version = "0.1.0"
edition = "2021"
author = "rudolf slusarski"
readme = "README.md"
repository = "https://github.com/rudolf-slusarski/rustplot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"